--- a/SRteacher/Content/scss/SRv3-manager.scss
+++ b/SRteacher/Content/scss/SRv3-manager.scss
@@ -30,6 +30,7 @@
 @import "modules/evaluate";
 @import "modules/table-recommendedBook";
 @import "modules/table-RPList";
+@import "modules/glyphicon";
 
 @import "pages/index";//done
 @import "pages/account-teacher";//done
