--- a/SRteacher/Content/scss/SRv3-manager.scss
+++ b/SRteacher/Content/scss/SRv3-manager.scss
@@ -43,5 +43,7 @@
 @import "pages/testMgt-school";
 
 
-@import "pages/_RP-bookList";//
-@import "pages/RPset-courseActivity";
+@import "pages/RP-bookList";//done
+@import "pages/RP-quiz";//done
+//@import "pages/RP-courseActivity";
+
