--- a/SRteacher/Content/scss/SRv3-manager.scss
+++ b/SRteacher/Content/scss/SRv3-manager.scss
@@ -31,6 +31,7 @@
 @import "modules/table-recommendedBook";
 @import "modules/table-RPList";
 @import "modules/glyphicon";
+@import "modules/superBoard";
 
 @import "pages/index";//done
 @import "pages/account-teacher";//done
@@ -45,5 +46,6 @@
 
 @import "pages/RP-bookList";//done
 @import "pages/RP-quiz";//done
+@import "pages/RP-manage";//ing
 //@import "pages/RP-courseActivity";
 
