--- a/SRteacher/Content/scss/bootstrap-5.2.3/scss/_modal.scss
+++ b/SRteacher/Content/scss/bootstrap-5.2.3/scss/_modal.scss
@@ -204,6 +204,12 @@
     --#{$prefix}modal-width: #{$modal-xl};
   }
 }   
+	  
+@include media-breakpoint-up(xxl) { //custom add
+  .modal-xxl {
+    --#{$prefix}modal-width: #{$modal-xxl};
+  }
+}   	  
 
 // scss-docs-start modal-fullscreen-loop
 @each $breakpoint in map-keys($grid-breakpoints) {
