--- a/SR/Content/sass/pages/_index.scss
+++ b/SR/Content/sass/pages/_index.scss
@@ -77,6 +77,7 @@
 				background-color:#FFF;
 				position:relative;
 				box-shadow:none;
+				box-shadow:1px 1px rgba(0,0,0,.25);
 			}
 			@media screen and (min-width: 768px) {
 			bottom: -30px;	
