--- a/SR/Content/css/promote-styles.css
+++ b/SR/Content/css/promote-styles.css
@@ -1065,6 +1065,7 @@ button .userScore.byTeacher.failed:hover { background-color: #ff2b2b; border: 1p
   .index-banner .carousel .carousel-indicators li { width: 16px; height: 16px; margin: 1px 4px; } }
 @media screen and (min-width: 1200px) { .index-banner .carousel .carousel-indicators { bottom: 5px; }
   .index-banner .carousel .carousel-indicators li { width: 20px; height: 20px; margin: 1px 5px; } }
+.index-banner .carousel .carousel-control { background-image: none; }
 .index-banner .carousel .carousel-control > img { position: absolute; top: 50%; margin-top: -52px; }
 @media screen and (min-width: 768px) { .index-banner .carousel .carousel-control > img { margin-top: -72px; } }
 @media screen and (min-width: 992px) { .index-banner .carousel .carousel-control > img { margin-top: -84.5px; } }
