--- a/SR/Content/css/promote-styles.css
+++ b/SR/Content/css/promote-styles.css
@@ -2753,3 +2753,5 @@ html:lang(en-us) .SRcanHelp .SRcanHelp__item .SRcanHelp__item__show .SRcanHelp__
 @media screen and (min-width: 520px) { html:lang(en-us) .SRcanHelp .SRcanHelp__item .SRcanHelp__item__hoverShow h3, html:lang(en-US) .SRcanHelp .SRcanHelp__item .SRcanHelp__item__hoverShow h3 { font-size: .9em; } }
 html:lang(en-us) .SRcanHelp .SRcanHelp__item .SRcanHelp__item__hoverShow h3, html:lang(en-US) .SRcanHelp .SRcanHelp__item .SRcanHelp__item__hoverShow h3 { line-height: 1.4; }
 html:lang(en-us) .index-reading3step .index-reading3step__step1 h3, html:lang(en-US) .index-reading3step .index-reading3step__step1 h3 { white-space: normal; }
+
+/*20251201*/
